--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <h2>Please sign in</h2>
                 <form class="login" action="" method="POST">
-                    <input class="id" type="text" name="userid" placeholder="Enter ID">
+                    <input class="name" type="text" name="username" placeholder="Enter username">
                     <input class="pass" type="text" name="password" placeholder="Enter PASS">
                     <button class="sendButton"type="submit">送信</button>
                 </form>
