ヘッダーのロゴをクリックすることでログインページに遷移するようにしました

--- a/public/index.html
+++ b/public/index.html
@@ -31,22 +31,14 @@
   <body>
     <header>
       <div class="container">
-        <img
-          class="header-logo"
-          width="150"
-          height="70"
-          src="./img/ISDL_logo.png"
-        />
-        <!--
-                <div class="header-list">
-                    <ul>
-                        <li><a href="./about.html">about</a></li>
-                        <li><a href="./goods.html">goods</a></li>
-                        <li><a href="./member.html">member</a></li>
-                        <li><a href="./schedule.html">schedule</a></li>
-                    </ul>
-                </div>
-                -->
+        <a href="./index.html">
+          <img
+            class="header-logo"
+            width="150"
+            height="70"
+            src="./img/ISDL_logo.png"
+          />
+        </a>
       </div>
     </header>
 
@@ -63,9 +55,14 @@
           />
           <button class="sendButton" type="submit">送信</button>
         </form>
-        <a href="./registration.html">登録済みでない方はこちら</a>
-        <a href="./students.html">生徒</a>
-        <a href="./teacher.html">先生</a>
+
+        <div class="trans_registration">
+          <a class="trans_registration" href="./registration.html"
+            >登録済みでない方はこちら</a
+          >
+          <a class="trans_registration" href="./students.html">生徒</a>
+          <a class="trans_registration" href="./teacher.html">先生</a>
+        </div>
       </div>
     </div>
 
