--- a/public/status.html
+++ b/public/status.html
@@ -57,12 +57,14 @@
     <!--ここからサイドバーのところ-->
     <div class="header">
       <div class="container">
-        <img
-          class="header-logo"
-          width="150"
-          height="70"
-          src="./img/ISDL_logo.png"
-        />
+        <a href="./index.html">
+          <img
+            class="header-logo"
+            width="150"
+            height="70"
+            src="./img/ISDL_logo.png"
+          />
+        </a>
       </div>
     </div>
 
