--- a/public/teacher.html
+++ b/public/teacher.html
@@ -56,13 +56,14 @@
 
     <header>
       <div class="container">
-        <img
-          class="header-logo"
-          width="150"
-          height="70"
-          src="./img/ISDL_logo.png"
-        />
-      </div>
+        <a href="./index.html">
+          <img
+            class="header-logo"
+            width="150"
+            height="70"
+            src="./img/ISDL_logo.png"
+          />
+        </a>
     </header>
 
     <div class="top-wrapper">
