文言を編集しました

--- a/public/registration.html
+++ b/public/registration.html
@@ -44,7 +44,7 @@
 
     <div class="top-wrapper">
       <div class="container">
-        <h2>Please sign in</h2>
+        <h2>Please Registration</h2>
         <form class="login" action="/index" method="POST">
           <input class="id" type="text" name="userid" placeholder="Enter ID" />
           <input
