--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,11 @@
             
         <div class="top-wrapper">
             <div class="container">
-                <h2>Please sign in</h2>
-                <form class="login" action="" method="POST">
-                    <input class="id" type="text" name="userid" placeholder="Enter ID">
-                    <input class="pass" type="text" name="password" placeholder="Enter PASS">
-                    <button class="sendButton"type="submit">送信</button>
+                <h2>ログイン</h2>
+                <form class="login" action="/login" method="POST">
+                    <input class="name" type="text" name="username" placeholder="Enter username">
+                    <input class="pass" type="password" name="password" placeholder="Enter PASS">
+                    <button class="sendButton"type="submit">ログイン</button>
                 </form>
                 <a href="./registration.html">登録済みでない方はこちら</a>
                 <a href="./students.html">生徒</a>
