--- a/public/registration.html
+++ b/public/registration.html
@@ -47,12 +47,13 @@
             
         <div class="top-wrapper">
             <div class="container">
-                <h2>Please sign in</h2>
-                <form class="login" action="/index" method="POST">
-                    <input class="id" type="text" name="userid" placeholder="Enter ID">
-                    <input class="pass" type="text" name="password" placeholder="Enter PASS">
-                    <button class="sendButton"type="submit">送信</button>
+                <h2>新規登録</h2>
+                <form class="login" action="/registration" method="POST">
+                    <input class="name" type="text" name="username" placeholder="Enter username">
+                    <input class="pass" type="password" name="password" placeholder="Enter PASS">
+                    <button class="sendButton"type="submit">登録</button>
                 </form>
+                <a href="./index.html">登録済みの方はこちら</a>
             </div>
         </div>
         
