--- a/public/teacher.html
+++ b/public/teacher.html
@@ -40,7 +40,7 @@
       <div class="container">
         <br />
         <br />
-        <li>MENU</li>
+        <li><a href="./teacher.html">MENU</a></li>
         <br />
         <li><a href="./status.html" target="_blank">返信状況</a></li>
         <hr width="150" />
