jollyが変えたよ

--- a/public/registration.html
+++ b/public/registration.html
@@ -53,7 +53,9 @@
                 <input class="pass" type="password" name="password" placeholder="Enter PASS">
                 <button class="sendButton"type="submit">登録</button>
             </form>
-            <a href="./index.html">登録済みの方はこちら</a>
+            <div class="trans_registration">
+              <a class="trans_registration" href="./index.html">登録済みの方はこちら</a>
+            </div>
         </div>
         <!--<a href="./index.html">登録済みの方はこちら</a>-->
       </div>
